--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,7 +9,7 @@
    >
 
     <com.elmorshdi.drawingtask.DrawingView
-        android:id="@+id/drawingview"
+        android:id="@+id/drawing_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
